# scripts

test/: .AUTHORS.rst.swp  .MANIFEST.in.swp  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
test/docs/: conf.py  installation.rst
test/src/test/: __init__.py  cli.py
test/tests/: test_test.py
