[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.1.0"
description = "test-proj"
readme = "README.rst"
authors = [
  {name = "Jiaao Wang", email = "wangjiaao0720@utexas.edu"}
]
maintainers = [
  {name = "Jiaao Wang", email = "wangjiaao0720@utexas.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/JiaaoWANG-ut/test/issues"
changelog = "https://github.com/JiaaoWANG-ut/test/blob/master/changelog.md"
homepage = "https://github.com/JiaaoWANG-ut/test"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

